--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   ],
   "license": "ISC",
   "dependencies": {
+    "@actions/core": "^1.6.0",
+    "@actions/github": "^5.0.0",
     "@octokit/core": "^3.5.1",
     "@vercel/ncc": "^0.33.1",
     "winston": "^3.5.0",
