--- a/.github/workflows/shamshir.yml
+++ b/.github/workflows/shamshir.yml
@@ -14,9 +14,8 @@ jobs:
       - run: echo "🌙 Shamshir was automatically triggered by a ${{ github.event_name }} event."
       - uses: actions/checkout@v2
       - run: npm install
-      - run: npm cache clean -f
       - id: shamshir-run
-        uses: kyagi/shamshir@main
+        uses: kyagi/shamshir@v1
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           owner: ${{ github.repository_owner }}
