--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "ncc build src/shamshir-github-actions.js -o dist",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "coverage": "jest --coverage"
   },
   "author": "Kazuo Yagi",
   "keywords": [
@@ -24,5 +25,8 @@
     "@vercel/ncc": "^0.33.1",
     "winston": "^3.5.0",
     "yargs": "^17.3.1"
+  },
+  "devDependencies": {
+    "jest": "^27.5.1"
   }
 }
